# np-complete

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: default-build.yml
GraphColoring/: CMakeLists.txt  DSatur_coloring.cc  JohnPlassmann_coloring.cpp  README.md  RLF_coloring.cpp  bench.cpp  bruteforce_coloring.cpp  graph.cpp  graph.hpp  graph_coloring.hpp  greedy_coloring.cpp
GraphColoring/src/: coloring_bench.cpp  graph.cpp  graph.h  mis_generator.h  perm_repeat_generator.cpp  perm_repeat_generator.h  set_index_converter.h
GraphColoring/traces/: input_fc_v6.txt  input_fc_v7.txt  input_fc_v8.txt  input_fc_v9.txt
HamiltonianPathProblem/: CMakeLists.txt  README.md  bf_solution.cpp  dp_solution.cpp  graph.cpp  graph.h  hamiltonian_path_brute_force_solver.cpp  hamiltonian_path_brute_force_solver.h  hamiltonian_path_dp_solver.cpp  hamiltonian_path_dp_solver.h  main.cpp
HamiltonianPathProblem/Report/: Estimations.xlsx
Knapsack/: CMakeLists.txt  Makefile  README.md  Test_00.txt  knapsack.cpp  knapsack.h  main.cpp
Knapsack/data/: Test_00.txt  ip_10.txt  ip_100.txt  ip_15.txt  ip_25.txt  ip_35.txt  ip_40.txt  ip_45.txt  ip_50.txt  ip_55.txt  op_10.txt  op_100.txt  op_1000.txt  op_10000.txt  op_25.txt  op_55.txt  op_60.txt  output_25.txt  output_30.txt  pi.py  po.py
Knapsack/includes/: common.h  knapsack.h  test_generator.h
Knapsack/src/: CMakeCache.txt  Makefile  cmake_install.cmake  knapsack.cpp  knapsack_bench.cpp  main.cpp  test_generator.cpp
SAT/: CMakeLists.txt  cnf.hpp  cnf_parser.cpp  cnf_parser.hpp  sat_bench.cpp
clique/: CMakeLists.txt  README.md  clique.cpp  clique.hpp  clique_bench.cpp  graph.cpp  graph.hpp  graph_generator.cpp  graph_generator.hpp
clique/inputs/: benchmark.in  test_clique.2.in  test_clique.3.in  test_clique.4.in  test_clique.5.in
clique/misc/: bench.json  test_generator.py
docker/: Dockerfile
knight_tour/: CMakeLists.txt  comp_info.txt  knight.cpp  knight.hpp  knight_bench.cpp  results.csv
subset/: CMakeLists.txt  README.md  SSet.cpp  SSet.h  bench_subset_BF.cpp  bench_subset_opt.cpp  bench_subset_optHS.cpp  main.cpp  set_bench.cpp
tests/: CMakeLists.txt
tests/GraphColoring/: tests.cpp
tests/HamiltonianPathProblem/: graph_test.cpp  hamiltonian_path_brute_force_test.cpp  hamiltonian_path_dp_solver_test.cpp  hamiltonian_path_dp_test.cpp
tests/Knapsack/: knapsack_gtest.cpp  run_knapsack.cpp
tests/Knapsack/data/: ip_1000.txt  ip_10000.txt  ip_20.txt  ip_30.txt  ip_60.txt  op_10.txt  op_15.txt  op_20.txt  op_30.txt  op_35.txt  op_40.txt  op_45.txt  op_50.txt
tests/Knapsack/includes/: test_generator.h
tests/Knapsack/src/: knapsack_gtest.cpp  run_knapsack.cpp
tests/clique/: clique_test.cpp  graph_test.cpp
tests/coloring/: CMakeLists.txt  Test_Graph.cpp  main.cpp
tests/input_sets/: set_100.txt  set_false_10.txt  set_false_15.txt  set_false_20.txt  set_false_25.txt  set_false_30.txt  set_generator.py  set_true_10.txt  set_true_15.txt  set_true_20.txt  set_true_25.txt  set_true_30.txt
tests/knight_tour/: knight_tests.cpp
tests/sat/: parser_tests.cpp
tests/subset/: basic.cpp  bruteforce.cpp  optHS.cpp  optimized.cpp
